--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: pass
       POSTGRES_DB: db
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
 
   server:
     links:
@@ -30,3 +30,18 @@ services:
       - ./server:/app
       - /app/node_modules
       - /app/prisma
+
+  client:
+    container_name: tigercat_client
+    ports:
+      - '3000:3000'
+    build:
+      context: client
+      dockerfile: Dockerfile
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+      - /app/.next
+
+volumes:
+  postgres-data:
