--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,11 @@
 FROM node:12.14.1-slim
 RUN apt-get -qy update && apt-get -qy install openssl
 
-RUN mkdir /app
-WORKDIR /app
+WORKDIR /usr/src/app
 
 COPY package*.json ./
 RUN npm install
+
+COPY . .
 
 CMD [ "npm", "run", "dev:client" ]
