--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "clean:images": "docker system prune -af",
     "clean:volumes": "docker volume prune -f"
   },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
