--- a/server/package.json
+++ b/server/package.json
@@ -1,47 +1,24 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start:server": "node dist/server",
-    "clean:server": "rm -rf dist",
-    "build:server": "npm -s run clean && npm -s run generate && tsc",
-    "generate:server": "npm -s run generate:prisma && npm -s run generate:nexus",
-    "generate:prisma": "prisma generate",
-    "generate:nexus": "ts-node --transpile-only src/schema",
-    "postinstall": "npm -s run generate:server",
-    "dev:server": "ts-node-dev --no-notify --respawn --transpileOnly src/server"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "2.0.0-beta.1",
-    "bcryptjs": "2.4.3",
-    "graphql": "14.6.0",
-    "graphql-shield": "5.7.3",
-    "graphql-yoga": "1.18.3",
-    "jsonwebtoken": "8.5.1",
-    "nexus": "0.12.0",
-    "nexus-prisma": "0.11.1"
-  },
-  "devDependencies": {
-    "@prisma/cli": "2.0.0-beta.1",
-    "@types/bcryptjs": "2.4.2",
-    "@types/jsonwebtoken": "8.3.9",
-    "@types/node": "12.12.34",
-    "@types/ws": "7.2.3",
-    "ts-node": "8.8.2",
-    "ts-node-dev": "1.0.0-pre.44",
-    "typescript": "3.8.3"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "semi": false,
-    "trailingComma": "all"
-  },
-  "engines": {
-    "node": ">=10.0.0"
-  }
+   "name": "apollo-server-boilerplate",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "devDependencies": {
+      "@types/express": "^4.17.5",
+      "@types/graphql": "^14.5.0",
+      "@types/node": "^8.0.29",
+      "nodemon": "^2.0.3",
+      "ts-node": "3.3.0",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "apollo-server-express": "^2.12.0",
+      "express": "^4.17.1",
+      "graphql": "^15.0.0",
+      "pg": "^7.3.0",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.24"
+   },
+   "scripts": {
+      "start:server": "nodemon"
+   }
 }
